Fix overflow issue in scores

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: 100vh;
+   /*  height: 100vh;*/
     justify-content: center;
     align-content: center;
   }
@@ -103,7 +103,7 @@ body {
     display: flex;
     justify-content:center;
     align-items: center;
-    min-height: 50vh;
+   /* min-height: 50vh;*/
     flex-direction: column;
   }
   
@@ -249,7 +249,9 @@ form {
   
   .hud-prefix {
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.2rem;
+   
+    font-weight: bold;
   }
   
   .hud-main-text {
